# TrafficLightTask

./: .gitignore  README.md  VideoUrls.txt  start_traffic_light_processing.sh
traffic_light_analysis/: CMakeLists.txt  package.xml
traffic_light_analysis/include/traffic_light_analysis/: traffic_light_analysis_node.h
traffic_light_analysis/launch/: traffic_light_analysis.launch
traffic_light_analysis/src/: main.cpp
traffic_light_analysis/src/traffic_light_analysis/: traffic_light_analysis_node.cpp
traffic_light_analysis/test/: CMakeLists.txt  traffic_light_analysis.test  traffic_light_analysis_test.py
traffic_light_fetcher/: CMakeLists.txt  package.xml
traffic_light_fetcher/config/: traffic_light_fetcher_params.yaml
traffic_light_fetcher/include/traffic_light_detector/: circle_detection_params.h  simple_traffic_light_detector.h  simple_traffic_light_detector_params.h  traffic_light_detector_interface.h
traffic_light_fetcher/include/traffic_light_fetcher/: traffic_light_fetcher_node.h
traffic_light_fetcher/launch/: traffic_light_fetcher.launch
traffic_light_fetcher/src/: main.cpp
traffic_light_fetcher/src/traffic_light_detector/: simple_traffic_light_detector.cpp  simple_traffic_light_detector_params.cpp
traffic_light_fetcher/src/traffic_light_fetcher/: traffic_light_fetcher_node.cpp
traffic_light_fetcher/test/: CMakeLists.txt  simple_traffic_light_detector_params.cpp  simple_traffic_light_detector_test.cpp  traffic_light_fetcher.test  traffic_light_fetcher_test.py
traffic_light_processing/: CMakeLists.txt  package.xml
traffic_light_processing/launch/: full_traffic_light_processing.launch
traffic_light_processing/test/: full_traffic_light_processing.test  full_traffic_light_processing_test.py
