<?xml version="1.0"?>
<package format="2">
  <name>traffic_light_analysis</name>
  <version>1.0.0</version>
  <description>ROS package for traffic light analysis.</description>

  <maintainer email="smk.robotics@gmail.com">Kirill Smirnov</maintainer>

  <license>GPL-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>gencpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>rostest</test_depend>
</package>