<?xml version="1.0"?>
<package format="2">
  <name>traffic_light_processing</name>
  <version>1.0.0</version>
  <description>ROS meta-package for full traffic light processing control.</description>

  <maintainer email="smk.robotics@gmail.com">Kirill Smirnov</maintainer>
  
  <license>GPL-3</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
